kustomize/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - prodargo.jlehtimaki.polarsquad.dev
      secretName: hello-world-app-tls
  rules:
    - host: prodargo.jlehtimaki.polarsquad.dev
      http:
        paths:
          - backend:
              serviceName: hello-world-app
              servicePort: 8080
